# gex-terminal

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  gex_config.py  gex_consumer.py  gex_engine.py  gex_terminal.py  gex_terminal.tcss  main.py  market_data_adapter.py  pyproject.toml  replay_adapter.py  requirements.txt  tradovate_adapter.py
docs/: adapters.md  databento-fixtures.md  exports.md  market-analysis.md  model-assumptions.md  product-vision.md  replay-lab.md  replay-research.md
gex_terminal/: __init__.py  cli.py  config.py  consumer.py  engine.py  feed_quality.py  fixture_validator.py  gex_terminal.tcss  market_data_adapter.py  offline_quality.py  overlays.py  regime.py  replay_catalog.py  replay_lab.py  sensitivity.py  snapshot.py  snapshot_formats.py  table_rows.py  tui.py
sample_data/: demo_replay.jsonl  es_call_wall_breakout.jsonl  es_chop_day.jsonl  es_expiration_compression.jsonl  es_gap_fade.jsonl  es_quality_stress.jsonl  es_synthetic_full_session.jsonl  es_trend_day.jsonl  es_volatility_spike.jsonl  es_zero_gamma_flip.jsonl
tests/: test_adapter_registry.py  test_databento_mapping.py  test_engine_structure.py  test_expiry_breakdown.py  test_feed_quality.py  test_fixture_validator.py  test_gex_config.py  test_gex_consumer.py  test_gex_engine.py  test_market_data_adapter.py  test_offline_quality.py  test_overlays.py  test_regime.py  test_replay_adapter.py  test_replay_lab.py  test_sensitivity.py  test_snapshot.py  test_snapshot_formats.py  test_tradovate_adapter.py  (+2 more)
(+19 files in other folders)
