[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gex-terminal"
version = "0.1.0"
description = "Terminal UI for intraday gamma exposure and options market structure."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "M. Scott Zeitner" }
]
keywords = [
    "gamma-exposure",
    "gex",
    "options",
    "futures",
    "terminal",
    "textual",
    "market-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "aiohttp>=3.9.0",
    "numpy==2.4.6",
    "python-dotenv>=1.0.0",
    "scipy==1.17.1",
    "textual==8.2.7",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/scottzeitner/gex-terminal"
Repository = "https://github.com/scottzeitner/gex-terminal"
Issues = "https://github.com/scottzeitner/gex-terminal/issues"

[project.scripts]
gex-terminal = "gex_terminal.cli:main_sync"

[tool.setuptools]
packages = ["gex_terminal", "gex_terminal.adapters"]

[tool.setuptools.package-data]
gex_terminal = ["*.tcss"]
